--- a/3 Car Analysis (Recommended 3)/Car Analysis.Rmd
+++ b/3 Car Analysis (Recommended 3)/Car Analysis.Rmd
@@ -28,9 +28,71 @@ I did both the original linear model, and the transformation recommended by the 
 
 <br>
 
+```{r setup, echo=FALSE, include=FALSE}
+library(tidyverse)
+library(MASS)
+library(pander)
 
+car_analysis <- read_csv("car_analysis.csv")
+```
 
-![](Car-Analysis_files/figure-html/unnamed-chunk-1-1.png)<!-- -->
+```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.width=10}
+
+            #Linear Models and Transformations
+
+carLm <- lm(price~mileage, data=car_analysis)
+CarlmSqrt <- lm(sqrt(price)~mileage, data=car_analysis)
+
+PredictedSell <- predict(CarlmSqrt, data.frame(mileage=220000))^2
+bs <- coef(CarlmSqrt)
+
+            #Base Plot with all data and curved lm
+
+ggplot(data=car_analysis, mapping = aes(x=mileage, y=price))+
+  geom_point(col="black")+
+  stat_function(fun=function(x) (bs[1]+(bs[2]*x))^2,col="steelblue", linewidth = 1)+
+  
+            #added original LM Just in case
+  
+     geom_smooth(method = "lm", se = FALSE, color = "lightgrey", linetype="dotted")+
+  
+    
+            #Joining The points
+  
+  geom_line(data=data.frame(mileage=c(128000, 220000), price=c(3300, PredictedSell)), aes(x=mileage, y=price), color="black") + 
+  
+            #Predicted Purchasing Point  
+  
+  geom_point(aes(x= 128000, y= 3300, color="Buy Point"), size=3)+
+  
+            #Predicted Selling Point
+  
+  geom_point(data=data.frame(mileage=220000, price=PredictedSell), aes(x=mileage, y=price, color="Sell Point"), size=3)+
+  
+            #X and Y
+  
+  scale_x_continuous(breaks = seq(0,250000,by=50000), labels = c("0","50,000","100,000","150,000","200,000","250,000")) +
+  
+  scale_y_continuous(breaks = seq(0,20000,by=5000), labels = c("0","$5,000","$10,000","$15,000","$20,000")) +
+  
+            #Adding my labels and Theme  
+  
+  labs(
+    x="Mileage",
+    y="Price in Dollars",
+    title="Car price analysis based on mileage",
+    col="buy and sell point"
+  )+
+  theme_bw()+
+  theme(plot.title = element_text(hjust = 0.5, size=12),
+        axis.title = element_text(size=10),
+        axis.title.x = element_text(vjust = -1.5),
+        axis.title.y = element_text(vjust = 3.5),
+        axis.text = element_text(size=8),
+        legend.text = element_text(size = 8),
+        legend.title = element_text(size = 10),
+        plot.margin = margin(.5, .5, .5, .5, "cm"))
+```
 
 <br> <br>
 
@@ -59,29 +121,10 @@ you can sell it by parts even after it's considered junk and still get
 some money back. <br> Let's take a look at the statistical summary of
 the model. <br> <br>
 
-
-```r
+```{r}
 summary(CarlmSqrt) %>% 
   pander()
 ```
-
-
------------------------------------------------------------------
-     &nbsp;         Estimate    Std. Error   t value   Pr(>|t|)  
------------------ ------------ ------------ --------- -----------
- **(Intercept)**     143.4        1.744       82.24    5.171e-85 
-
-   **mileage**     -0.0003762   1.396e-05    -26.95    2.737e-44 
------------------------------------------------------------------
-
-
---------------------------------------------------------------
- Observations   Residual Std. Error   $R^2$    Adjusted $R^2$ 
--------------- --------------------- -------- ----------------
-      90               9.52           0.8919       0.8907     
---------------------------------------------------------------
-
-Table: Fitting linear model: sqrt(price) ~ mileage
 
 <br> <br> 
 In my opinion, things look good so far to make this model
@@ -94,7 +137,59 @@ trust the model.
 
 <br>
 
-![](Car-Analysis_files/figure-html/unnamed-chunk-3-1.png)<!-- -->
+```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.width=10}
+carLm <- lm(price~mileage, data=car_analysis)
+PredictedSell2 <- predict(carLm, data.frame(mileage=220000))
+
+
+            #Here is the base point plot and line
+
+ggplot(data=car_analysis, mapping = aes(x=mileage, y=price))+
+  geom_point(col="black")+
+  geom_smooth(method="lm", formula=y~x, se=F, col="steelblue")+
+  
+    
+            #Joining The points
+  
+  geom_line(data=data.frame(mileage=c(128000, 220000), price=c(3300, PredictedSell2)), aes(x=mileage, y=price), color="black") + 
+  
+            #Predicted Buying Point
+  
+   geom_point(aes(x= 128000, y= 3300, color="Buy Point"), size=3)+
+  
+            #Predicted Selling Point
+  
+  geom_point(data=data.frame(mileage=220000, price=PredictedSell2), aes(x=mileage, y=price, color="Sell Point"), size=3)+
+  
+            #X and Y
+  
+  scale_x_continuous(breaks = seq(0,250000,by=50000), labels = c("0","50,000","100,000","150,000","200,000","250,000")) +
+  
+  scale_y_continuous(breaks = seq(0,20000,by=5000), labels = c("0","$5,000","$10,000","$15,000","$20,000")) +
+
+  
+            #Adding my labels and Theme  
+  
+  labs(
+    x="Mileage",
+    y="Price in Dollars",
+    title="Car price analysis based on mileage",
+    col="buy and sell point"
+  )+
+  theme_bw()+
+  
+            #Final touch
+  
+  theme(plot.title = element_text(hjust = 0.5, size=12),
+        axis.title = element_text(size=10),
+        axis.title.x = element_text(vjust = -1.5),
+        axis.title.y = element_text(vjust = 3.5),
+        axis.text = element_text(size=8),
+        legend.text = element_text(size = 8),
+        legend.title = element_text(size = 10),
+        plot.margin = margin(.5, .5, .5, .5, "cm"))
+  
+```
 
 <br> <br> 
 
@@ -112,29 +207,10 @@ which could make a difference.
 Let's see how the stat summary went for this model.
 <br> <br> 
 
-
-```r
+```{r}
 summary(carLm) %>% 
   pander()
 ```
-
-
----------------------------------------------------------------
-     &nbsp;        Estimate   Std. Error   t value   Pr(>|t|)  
------------------ ---------- ------------ --------- -----------
- **(Intercept)**    19646       380.3       51.66    1.305e-67 
-
-   **mileage**     -0.07635    0.003044    -25.08    7.361e-42 
----------------------------------------------------------------
-
-
---------------------------------------------------------------
- Observations   Residual Std. Error   $R^2$    Adjusted $R^2$ 
--------------- --------------------- -------- ----------------
-      90               2076           0.8773       0.8759     
---------------------------------------------------------------
-
-Table: Fitting linear model: price ~ mileage
 
 <br> <br> 
 
@@ -157,7 +233,10 @@ a better way.
 To check for transformations possibilities I ran a Box Cox test on my linear model and got the next graph.
 <br> <br>
 
-![](Car-Analysis_files/figure-html/unnamed-chunk-5-1.png)<!-- -->
+```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.width=10}
+
+boxcox_result <- boxcox(carLm)
+```
 
 <br> <br>
 
@@ -186,7 +265,12 @@ This will follow the transformed model and will allow you to get a better fit in
 
 <br> 
 
-![](Car-Analysis_files/figure-html/unnamed-chunk-6-1.png)<!-- -->
+```{r echo=FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.width=10}
+par(mfrow=c(1,3))
+plot(CarlmSqrt, which=1:2)
+plot(CarlmSqrt$residuals)
+
+```
 
 <br> <br>
 
@@ -198,7 +282,11 @@ The Diagnostic Plots for the transformed model look good to me, we can see that 
 
 <br>
 
-![](Car-Analysis_files/figure-html/unnamed-chunk-7-1.png)<!-- -->
+```{r echo=FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.width=10}
+par(mfrow=c(1,3))
+plot(carLm,which=1:2)
+plot(carLm$residuals)
+```
 
 <br> <br>
 
